precompiles/utils/macro/tests/precompile/compile-fail/handle/wrong-type.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/precompile/compile-fail/handle/wrong-type.rs:24:18
   |
24 |     fn foo(_handle: u32) {
   |                     ^^^
